# framework.system.crash-worker

./: CMakeLists.txt
packaging/: crash-worker.efl  crash-worker.manifest  crash-worker.spec
src/all_log_dump/: 92-all-log-dump.rules.in  CMakeLists.txt  all_log_dump.service  all_log_dump.sh  dump_log.sh
src/crash-manager/: CMakeLists.txt  core.c  crash-dbus.c  crash-dbus.h  crash-env.service  crash-manager-debug.conf.in  crash-manager-micro-debug.conf.in  crash-manager-micro.conf.in  crash-manager.conf.in  crash-manager.service  crash-manager.socket  crash_env.sh  manager.c  manager.h  org.tizen.system.crash.service  worker.c  worker.h
src/crashctl/: CMakeLists.txt  crashctl.c
src/dump_systemstate/: CMakeLists.txt
src/shared/: config-parser.c  config-parser.h  launch.c  launch.h
