CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
CONFIGURE_FILE(92-all-log-dump.rules.in 92-all-log-dump.rules @ONLY)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/all_log_dump/all_log_dump.sh DESTINATION /usr/bin
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
		GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/all_log_dump/dump_log.sh DESTINATION /usr/bin
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
		GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/all_log_dump/92-all-log-dump.rules DESTINATION /usr/lib/udev/rules.d
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
		GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/all_log_dump/all_log_dump.service DESTINATION /usr/lib/systemd/system
		PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
		GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
